# cpp-order-book

./: .gitignore  AGENTS.md  CMakeLists.txt  PROJECT_STATUS.md  _OB_ES_DEMO_2025-07-07_2025-07-07.csv  build.sh  demo_modify_order.cpp  portfolio_1000.csv  run_tests.sh  test_debug_setup.sh
cmake/: OrderBookConfig.cmake.in
examples/: README.md
examples/cpp_consumer_fetchcontent/: AGENTS.md  CMakeLists.txt  DEBUG_GUIDE.md  DatabentoCache.h  DatabentoMboClient.cpp  DatabentoMboClient.h  OrderBookManager.cpp  OrderBookManager.h  PortfolioManager.cpp  PortfolioManager.h  README.md  Strategy.cpp  Strategy.h  TOB_ES_DEMO_2025-07-07_2025-07-07.csv  TOB_ES_DEMO_2025-07-08_2025-07-08.csv  TopOfBookTracker.cpp  TopOfBookTracker.h  main.cpp  portfolio_0.csv  portfolio_1000.csv  run_demo.sh  test_debug_setup.sh  test_mbo_integration.cpp
examples/cpp_consumer_fetchcontent/databento_cache/: GLBX.MDP3_2024-06-28_15-30_2024-06-28_15-32_ESM4_0.dbn  GLBX.MDP3_2024-06-28_15-30_2024-06-28_15-35_ESU4_0.dbn
examples/cpp_consumer_installed/: CMakeLists.txt  main.cpp
include/: CMakeLists.txt  Helpers.h  IClient.h  Interfaces.h  Order.h  OrderBook.h  PriceLevel.h  Trade.h
src/: CMakeLists.txt  Helpers.cpp  OrderBook.cpp  PriceLevel.cpp
tests/: CMakeLists.txt  test_helpers.cpp  test_integration.cpp  test_main.cpp  test_order_book.cpp  test_price_level.cpp
